edit show page2

--- a/resources/css/customize.css
+++ b/resources/css/customize.css
@@ -19,3 +19,16 @@ a:focus {
     outline-style:none;
     -moz-outline-style: none;
 }
+
+.answer-block{
+    margin: 0px 30px 30px 30px;
+    border-bottom:1px solid rgba(0, 0, 0, 0.125) ;
+}
+
+.answer-block:last-child {
+    border-bottom: 0px
+}
+
+.question-main{
+    margin:30px 0px;
+}
