--- a/public/css/all.css
+++ b/public/css/all.css
@@ -194,6 +194,26 @@ a:focus {
     border-bottom: 0px
 }
 
+.list-button{
+    display: block;
+    height:4em;
+    background-color: transparent !important;
+}
+
 .question-main{
     margin:30px 0px;
 }
+
+.no-collor{
+    background-color: transparent!important;
+}
+
+.read-block{
+    padding-bottom: calc(.5em - 1px);
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-top: calc(.5em - 1px);
+    text-align: center;
+    white-space: nowrap;
+}
+
