--- a/resources/css/customize.css
+++ b/resources/css/customize.css
@@ -52,3 +52,18 @@ a:focus {
     white-space: nowrap;
 }
 
+.profile-info-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.profile-block{
+    padding-bottom: calc(.5em - 1px);
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-top: calc(.5em - 1px);
+    text-align: center;
+    white-space: nowrap;
+}
+
+
