--- a/resources/css/customize.css
+++ b/resources/css/customize.css
@@ -20,6 +20,8 @@ a:focus {
     -moz-outline-style: none;
 }
 
+
+
 .answer-block{
     margin: 0px 30px 30px 30px;
     border-bottom:1px solid rgba(0, 0, 0, 0.125) ;
@@ -27,6 +29,10 @@ a:focus {
 
 .answer-block:last-child {
     border-bottom: 0px
+}
+
+.custom-gray{
+    color:rgb(74, 74, 74);
 }
 
 .list-button{
