投票機能完了

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -196,8 +196,8 @@ a:focus {
     border-bottom: 0px
 }
 
-.gray{
-    color:rgb(74, 74, 74)!important;
+.custom-gray{
+    color:rgb(74, 74, 74);
 }
 
 .list-button{
