--- a/public/css/all.css
+++ b/public/css/all.css
@@ -185,8 +185,6 @@ a:focus {
     -moz-outline-style: none;
 }
 
-
-
 .answer-block{
     margin: 0px 30px 30px 30px;
     border-bottom:1px solid rgba(0, 0, 0, 0.125) ;
@@ -237,4 +235,62 @@ a:focus {
     white-space: nowrap;
 }
 
+.bannberPh{
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+}
 
+.dot{
+    color: #00d1b2;
+}
+
+.description-list{
+    padding: 20px;
+    margin: 10px 0 25px!important;
+    text-align: left;
+    list-style: none;
+    border-top: 1px dashed #c2c5cd;
+    border-bottom: 1px dashed #c2c5cd;
+}
+
+.list-wrap {
+    list-style:  none;
+    margin:  0;
+    padding: 0;
+}
+
+.list-difficult:before {
+    content:  "";
+    width:  10px;
+    height:  10px;
+    display:  inline-block;
+    background-color: rgb(0, 209, 178);
+    margin-right: 0.5rem;
+    border-radius:  50%;
+}
+
+.description-container{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    max-width: 1024px;
+    padding-right: 20px;
+    padding-left: 20px;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+}
+
+
+.vertical{
+    display: flex;
+    justify-content: center;
+    text-align: justify;
+    flex-direction: column;
+}
